--- a/pages/index.html
+++ b/pages/index.html
@@ -343,7 +343,7 @@
                                                     <td>接Database</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>創建活動內容方便</td>
+                                                    <td>創建活動內容方便 (活動標題/內容/活動起始日/連結網頁)</td>
                                                 </tr>
                                                 <tr>
                                                     <td>加上tag，左側能快速選擇</td>
