--- a/pages/index.html
+++ b/pages/index.html
@@ -74,7 +74,8 @@
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> 首頁</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i>店家<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-files-o fa-fw"></i>店家列表</a>
+							<!--
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="#">7-11</a>
@@ -110,9 +111,11 @@
                                     <a href="#">王品企業</a>
                                 </li>
                             </ul>
+							-->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i>行動支付<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-files-o fa-fw"></i>行動支付整理</a>
+							<!--
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="#">橘子支付</a>
@@ -154,9 +157,11 @@
                                     <a href="#">Samsung Pay</a>
                                 </li>
                             </ul>
+							-->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i>信用卡<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-files-o fa-fw"></i>信用卡大全</a>
+							<!--
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="#">【懶人包辦卡】</a>
@@ -198,6 +203,7 @@
                                     <a href="#">其他特殊卡種</a>
                                 </li>
                             </ul>
+							-->
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-files-o fa-fw"></i>銀行<span class="fa arrow"></span></a>
@@ -544,6 +550,7 @@
                                                     <th>活動名稱</th>
                                                     <th>活動內容</th>
                                                     <th>活動期限</th>
+                                                    <th>標籤</th>
                                                     <th>備註</th>
                                                     <th>網址</th>
                                                 </tr>
@@ -554,8 +561,28 @@
                                                     <td>中信ATM集點換好禮</td>
                                                     <td>107/11/01~108/01/31 於中國信託ATM完成指定交易，累積1點(含)以上即可於108/02/07 23:59(含)前憑積點帳號之有效金融卡至中國信託ATM兌換集點換好禮商品，部分商品數量有限，換完為止!</td>
                                                     <td>107/11/01~108/01/31</td>
+													<td><button type="button" class="btn btn-info">7-11</button>
+													    <button type="button" class="btn btn-info">中國信託</button>
+														<button type="button" class="btn btn-info">ATM</button>
+													</td>
 													<td></td>
 													<td><a href="https://www.ctbcbank.com/tw/html/ATM/EDM/P7.html">介紹</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>Line Pay信用卡行銷加碼</td>
+                                                    <td>Hotels.com、agnès b.、STUDIO A、LINE TV、LINE STORE、LINE酷券、TRUE YOGA FITNESS、 屈臣氏、全國加油站、秀泰影城、愛買…LINE Points無所不在，最高享15%回饋，回饋無上限— Pick一下，LINE Pay卡，就4ni的生活圈！</td>
+                                                    <td>108/1/1 ~ 108/12/31</td>
+													<td><button type="button" class="btn btn-info">LINE</button>
+													    <button type="button" class="btn btn-info">LINE酷券</button>
+														 <button type="button" class="btn btn-info">愛買</button>
+													    <button type="button" class="btn btn-info">Hotels.com</button>
+														<button type="button" class="btn btn-info">秀泰影城</button>
+														<button type="button" class="btn btn-info">屈臣氏</button>
+														<button type="button" class="btn btn-info">全國加油站</button>
+													</td>
+													<td></td>
+													<td><a href="https://www.ctbcbank.com/html/long/creditcard/LINEPay/notes.html">介紹</a></td>
                                                 </tr>
                                             </tbody>
                                         </table>
