--- a/pages/index.html
+++ b/pages/index.html
@@ -596,6 +596,63 @@
                     </div>
                     <!-- /.panel -->
 
+	                    <!-- /.panel -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> KFC 肯德基活動
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered table-hover table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th>#</th>
+                                                    <th>活動名稱</th>
+                                                    <th>活動內容</th>
+                                                    <th>活動期限</th>
+                                                    <th>標籤</th>
+                                                    <th>備註</th>
+                                                    <th>網址</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>KFC 肯德基 優惠券快選</td>
+                                                    <td>鄉民整理的KFC肯德基優惠券快選網頁</td>
+                                                    <td>活動期限請參考網頁</td>
+													<td><button type="button" class="btn btn-info">KFC</button>
+													    <button type="button" class="btn btn-info">肯德基</button>
+													</td>
+													<td></td>
+													<td><a href="https://kfc.2dim.space/">優惠券快選</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>PTT KFC肯德基 優惠券整理</td>
+                                                    <td>PTT fastfood 優惠券整理大全</td>
+                                                    <td>活動期限請參考網頁</td>
+													<td><button type="button" class="btn btn-info">KFC</button>
+													    <button type="button" class="btn btn-info">肯德基</button>
+													</td>
+													<td></td>
+													<td><a href="https://www.ptt.cc/bbs/fastfood/M.1526277935.A.DA0.html">PTT網頁整理</a></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!-- /.table-responsive -->
+                                </div>
+                            </div>
+                            <!-- /.row -->
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->		
+			
                 </div>
             </div>
             <!-- /.row -->
