--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,13 @@
 
   gtag('config', 'UA-18962191-7');
 </script>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-0550551964816384",
+          enable_page_level_ads: true
+     });
+</script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
