--- a/pages/index.html
+++ b/pages/index.html
@@ -669,6 +669,64 @@
                         <!-- /.panel-body -->
                     </div>
                     <!-- /.panel -->		
+
+	                    <!-- /.panel -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> 登錄回饋活動
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered table-hover table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th>#</th>
+                                                    <th>活動名稱</th>
+                                                    <th>活動內容</th>
+                                                    <th>活動期限</th>
+                                                    <th>標籤</th>
+                                                    <th>備註</th>
+                                                    <th>網址</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>台北捷運或雙北公車12%現金回饋活動</td>
+                                                    <td>於活動網頁成功登錄卡號資訊日起，持HappyCash有錢卡2.0搭乘台北捷運或雙北公車，可享每月累積扣款票價12%現金回饋，限量2萬卡號登錄，每月每卡回饋上限100元，回饋金將於活動期間每月計算回饋金額(以四捨五入計)，持卡人再於指定時間內至指定回饋靠卡通路讀卡機靠卡感應加值回饋金。</td>
+                                                    <td>108/02/01~108/6/30</td>
+													<td><button type="button" class="btn btn-info">台北捷運</button>
+													    <button type="button" class="btn btn-info">雙北公車</button>
+													</td>
+													<td></td>
+													<td><a href="https://www.happycashcard.com.tw/corporate/yhdpactive/index.do?activeId=event006">活動網站</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>Happycash捷運類公車8%現金回饋</td>
+                                                    <td>詳細通路請參考活動網頁</td>
+                                                    <td>108/01/01~108/6/30</td>
+													<td><button type="button" class="btn btn-info">台北捷運</button><button type="button" class="btn btn-info">桃園捷運</button><button type="button" class="btn btn-info">高雄捷運</button>
+													    <button type="button" class="btn btn-info">雙北公車</button>
+														<button type="button" class="btn btn-info">台鐵</button>
+													</td>
+													<td></td>
+													<td><a href="https://www.happycashcard.com.tw/corporate/resources/event/index.html">活動網站</a></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!-- /.table-responsive -->
+                                </div>
+                            </div>
+                            <!-- /.row -->
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->	
 			
                 </div>
             </div>
