--- a/pages/index.html
+++ b/pages/index.html
@@ -695,10 +695,11 @@
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
-                                                    <td>台北捷運或雙北公車12%現金回饋活動</td>
+                                                    <td>Happycash台北捷運或雙北公車12%現金回饋活動</td>
                                                     <td>於活動網頁成功登錄卡號資訊日起，持HappyCash有錢卡2.0搭乘台北捷運或雙北公車，可享每月累積扣款票價12%現金回饋，限量2萬卡號登錄，每月每卡回饋上限100元，回饋金將於活動期間每月計算回饋金額(以四捨五入計)，持卡人再於指定時間內至指定回饋靠卡通路讀卡機靠卡感應加值回饋金。</td>
                                                     <td>108/02/01~108/6/30</td>
-													<td><button type="button" class="btn btn-info">台北捷運</button>
+													<td><button type="button" class="btn btn-info">Happycash</button>
+													    <button type="button" class="btn btn-info">台北捷運</button>
 													    <button type="button" class="btn btn-info">雙北公車</button>
 													</td>
 													<td></td>
@@ -709,7 +710,8 @@
                                                     <td>Happycash捷運類公車8%現金回饋</td>
                                                     <td>詳細通路請參考活動網頁</td>
                                                     <td>108/01/01~108/6/30</td>
-													<td><button type="button" class="btn btn-info">台北捷運</button><button type="button" class="btn btn-info">桃園捷運</button><button type="button" class="btn btn-info">高雄捷運</button>
+													<td><button type="button" class="btn btn-info">Happycash</button>
+													    <button type="button" class="btn btn-info">台北捷運</button><button type="button" class="btn btn-info">桃園捷運</button><button type="button" class="btn btn-info">高雄捷運</button>
 													    <button type="button" class="btn btn-info">雙北公車</button>
 														<button type="button" class="btn btn-info">台鐵</button>
 													</td>
