--- a/pages/index.html
+++ b/pages/index.html
@@ -673,7 +673,7 @@
 	                    <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> 登錄回饋活動
+                            <i class="fa fa-bar-chart-o fa-fw"></i> 交通類回饋活動
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -717,6 +717,53 @@
 													</td>
 													<td></td>
 													<td><a href="https://www.happycashcard.com.tw/corporate/resources/event/index.html">活動網站</a></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!-- /.table-responsive -->
+                                </div>
+                            </div>
+                            <!-- /.row -->
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->	
+
+	                    <!-- /.panel -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> 住宿類回饋活動
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered table-hover table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th>#</th>
+                                                    <th>活動名稱</th>
+                                                    <th>活動內容</th>
+                                                    <th>活動期限</th>
+                                                    <th>標籤</th>
+                                                    <th>備註</th>
+                                                    <th>網址</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>LINE旅遊 1/22-1/27 Agoda最高20%優惠</td>
+                                                    <td>LINE 旅遊導購 Agoda 1/22-1/27 預訂房間最高有20%優惠。可搭配信用卡回饋一起使用 ～ 預定3月底前的台灣地區飯店剛好有20%折扣</td>
+                                                    <td>108/01/22~108/01/27</td>
+													<td><button type="button" class="btn btn-info">Agoda</button>
+													    <button type="button" class="btn btn-info">導購</button>
+													    <button type="button" class="btn btn-info">LINE旅遊</button>
+													</td>
+													<td>[已結束]</td>
+													<td><a href="https://www.ptt.cc/bbs/Lifeismoney/M.1548165243.A.5AE.html">活動網站</a></td>
                                                 </tr>
                                             </tbody>
                                         </table>
