--- a/pages/index.html
+++ b/pages/index.html
@@ -537,7 +537,7 @@
                                                     <td>渣打銀行</td>
                                                     <td>渣打現金回饋御璽卡</td>
                                                     <td>不限通路無上限均享1.88%現金回饋</td>
-													<td></td>
+													<td><button type="button" class="btn btn-info">現金回饋</button></td>
 													<td><a href="https://service.standardchartered.com.tw/ssl/campaign/credit-cards/signature-card.asp">介紹</a></td>
                                                 </tr>
                                                 <tr>
@@ -545,8 +545,18 @@
                                                     <td>台新銀行</td>
                                                     <td>台新@GoGo卡</td>
                                                     <td>綁定Richart一般消費1.5%現金回饋，數位通路消費3.5%現金回饋</td>
-													<td></td>
+													<td><button type="button" class="btn btn-info">現金回饋</button></td>
 													<td><a href="https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010409/index.htm">介紹</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>3</td>
+                                                    <td>玉山銀行</td>
+                                                    <td>玉山 Pi 拍錢包信用卡</td>
+                                                    <td>國內外一般消費4.5% P幣回饋，特定通路最高享4.5% P幣回饋，回饋無上限，1:1折抵</td>
+													<td><button type="button" class="btn btn-info">點數回饋</button>
+														<button type="button" class="btn btn-info">全家便利超商</button>
+															<button type="button" class="btn btn-info">台灣大車隊</button></td>
+													<td><a href="https://www.esunbank.com.tw/event/credit/picard/index.html">說明網頁</a>(<a href="https://card.esunbank.com.tw/EsunCreditweb/txnproc/selApplyCard?PRJCD=APYCRD0049&param=APYCRD0049,,,,,zuvuuLuouuLuyuL0vozdog1gdzf1geouuuf033456,,,,,e">推薦辦卡網址</a>)</td>
                                                 </tr>
                                             </tbody>
                                         </table>
