--- a/pages/index.html
+++ b/pages/index.html
@@ -475,7 +475,7 @@
                                                     <td>100萬</td>
 													<td>跨行轉帳免費5次<br/>跨行提款免費5次</td>
                                                     <td>20191231</td>
-                                                    <td>需每個月達成條件，每月單筆轉入 NT2 萬元或使用Richart Visa金融卡消費兩筆</td>
+                                                    <td>需每個月達成條件，每月單筆轉入 NT2 萬元或使用Richart Visa金融卡消費兩筆<br/>(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
 													<td><a href="https://richart.tw/TSDIB_RichartWeb/static/home/Views/About/Savings.html">活動網址</a></td>
                                                 </tr>
                                                 <tr>
@@ -544,7 +544,7 @@
                                                     <td>2</td>
                                                     <td>台新銀行</td>
                                                     <td>台新@GoGo卡</td>
-                                                    <td>綁定Richart一般消費1.5%現金回饋，數位通路消費3.5%現金回饋</td>
+                                                    <td>綁定Richart一般消費1.5%現金回饋，數位通路消費3.5%現金回饋(<a href="https://richart.tw/TSDIB_RichartWeb/RC07/RC070100?sn=PQCIF">申請Richart網址</a>，能獲得NT$300用戶禮!)</td>
 													<td><button type="button" class="btn btn-info">現金回饋</button></td>
 													<td><a href="https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010104/TS020101010409/index.htm">介紹</a></td>
                                                 </tr>
@@ -556,7 +556,7 @@
 													<td><button type="button" class="btn btn-info">點數回饋</button>
 														<button type="button" class="btn btn-info">全家便利超商</button>
 															<button type="button" class="btn btn-info">台灣大車隊</button></td>
-													<td><a href="https://www.esunbank.com.tw/event/credit/picard/index.html">說明網頁</a>(<a href="https://card.esunbank.com.tw/EsunCreditweb/txnproc/selApplyCard?PRJCD=APYCRD0049&param=APYCRD0049,,,,,zuvuuLuouuLuyuL0vozdog1gdzf1geouuuf033456,,,,,e">推薦辦卡網址</a>)</td>
+													<td><a href="https://www.esunbank.com.tw/event/credit/picard/index.html">說明網頁</a><br/>(<a href="https://card.esunbank.com.tw/EsunCreditweb/txnproc/selApplyCard?PRJCD=APYCRD0049&param=APYCRD0049,,,,,zuvuuLuouuLuyuL0vozdog1gdzf1geouuuf033456,,,,,e">推薦辦卡網址</a>)</td>
                                                 </tr>
                                             </tbody>
                                         </table>
