--- a/pages/index.html
+++ b/pages/index.html
@@ -685,7 +685,7 @@
 	                    <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> KFC 肯德基活動
+                            <i class="fa fa-bar-chart-o fa-fw"></i> 速食店活動快報
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -726,6 +726,28 @@
 													</td>
 													<td></td>
 													<td><a href="https://www.ptt.cc/bbs/fastfood/M.1526277935.A.DA0.html">PTT網頁整理</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>3</td>
+                                                    <td>麥當勞鬧鐘</td>
+                                                    <td>每天可以抽獎有機會拿到不錯得優惠券，或是輸入發票填問券拿問券禮!</td>
+                                                    <td>無期限限制</td>
+													<td><button type="button" class="btn btn-info">麥當勞</button>
+													    <button type="button" class="btn btn-info">麥當勞鬧鐘</button>
+													</td>
+													<td></td>
+													<td><a href="https://www.mcdonalds.com.tw/twmobile/ch/activities/news_mcddaily.html">麥當勞報報</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>4</td>
+                                                    <td>麥當勞優惠券</td>
+                                                    <td>本優惠券可同步於麥當勞官網下載，可於店內出示手機、轉寄、影印及複製使用</td>
+                                                    <td>108/02/13~108/03/19</td>
+													<td><button type="button" class="btn btn-info">麥當勞</button>
+													    <button type="button" class="btn btn-info">優惠券</button>
+													</td>
+													<td></td>
+													<td><a href="http://campaign.mcdonalds.com.tw/0213coupon/">優惠券快點我!</a></td>
                                                 </tr>
                                             </tbody>
                                         </table>
