--- a/pages/index.html
+++ b/pages/index.html
@@ -224,17 +224,19 @@
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-files-o fa-fw"></i>銀行<span class="fa arrow"></span></a>
+				<!--
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="bankinterest.html">高利活存</a>
+                                    <a href="#">高利活存</a>
                                 </li>
                                 <li>
-                                    <a href="bankinterest.html">高利定存</a>
+                                    <a href="#">高利定存</a>
                                 </li>
                                 <li>
-                                    <a href="bankinterest.html">銀行代碼查詢</a>
+                                    <a href="#">銀行代碼查詢</a>
                                 </li>
                             </ul>
+-->
                         </li>
                     </ul>
                 </div>
@@ -348,7 +350,7 @@
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> 計畫開發
+                            <i class="fa fa-bar-chart-o fa-fw"></i> TBD 計畫開發 (20190213 )
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
