--- a/pages/index.html
+++ b/pages/index.html
@@ -223,7 +223,7 @@
 							-->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i>銀行<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-files-o fa-fw"></i>銀行<!--<span class="fa arrow"></span>--></a>
 				<!--
                             <ul class="nav nav-second-level">
                                 <li>
@@ -356,27 +356,9 @@
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered table-hover table-striped">
-                                            <thead>
-                                                <tr>
-                                                    <th>內容</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>接Database</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>創建活動內容方便 (活動標題/內容/活動起始日/連結網頁)</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>加上tag，左側能快速選擇</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <!-- /.table-responsive -->
+					1. 接Database<br/>
+					2. 創建活動內容方便 (活動標題/內容/活動起始日/連結網頁)<br/>
+					3. 加上tag，方便左側選單能快速選擇
                                 </div>
                             </div>
                             <!-- /.row -->
