--- a/pages/index.html
+++ b/pages/index.html
@@ -842,7 +842,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
-                                                    <td>購有錢Shopback導購</td>
+                                                    <td>購有錢Goyomoney導購</td>
                                                     <td>購有錢 集合國內外購物網站優惠券、折價券、折扣碼，每筆消費還可獲最高20%現金回饋。收錄全台購物網站的商品價格，讓您輕鬆搜尋商品比價，找到最便宜。</td>
                                                     <td>無限期</td>
 													<td><button type="button" class="btn btn-info">Shopback</button>
