--- a/pages/index.html
+++ b/pages/index.html
@@ -875,6 +875,65 @@
                     </div>
                     <!-- /.panel -->	
 			
+			
+	                    <!-- /.panel -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <i class="fa fa-bar-chart-o fa-fw"></i> 行動支付
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered table-hover table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th>#</th>
+                                                    <th>活動名稱</th>
+                                                    <th>活動內容</th>
+                                                    <th>活動期限</th>
+                                                    <th>標籤</th>
+                                                    <th>備註</th>
+                                                    <th>網址</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>LINE Pay 最新合作通路都在這！(</td>
+                                                    <td>LINE Pay 最新合作通路都在這！(</td>
+                                                    <td>無限期</td>
+													<td><button type="button" class="btn btn-info">LINE Pay</button>
+													    <button type="button" class="btn btn-info">通路</button>
+													</td>
+													<td>網站持續更新</td>
+													<td><a href="https://line.me/R/ch/163204195">查詢最新通路</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>PI錢包通路</td>
+                                                    <td>四大超商、超市賣場、計程車隊與餐飲商家，透過 Pi 拍錢包輕鬆付款；路邊停車費、水電費、信用卡費與電信帳單等生活費用，也可隨時隨地用手機繳款。綁定玉山 Pi 拍錢包信用卡*，最高享4.5% P幣回饋，「一拍即享，回饋無限」的行動生活從 Pi 拍錢包開始！(</td>
+                                                    <td>無限期</td>
+													<td><button type="button" class="btn btn-info">PI錢包</button>
+													    <button type="button" class="btn btn-info">通路</button>
+													</td>
+													<td>網站持續更新</td>
+													<td><a href="https://www.piapp.com.tw/enterprise/partners">查詢最新通路</a></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!-- /.table-responsive -->
+                                </div>
+                            </div>
+                            <!-- /.row -->
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->	
+			
+			
                 </div>
             </div>
             <!-- /.row -->
