--- a/pages/index.html
+++ b/pages/index.html
@@ -901,8 +901,8 @@
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
-                                                    <td>LINE Pay 最新合作通路都在這！(</td>
-                                                    <td>LINE Pay 最新合作通路都在這！(</td>
+                                                    <td>LINE Pay 最新合作通路都在這！</td>
+                                                    <td>LINE Pay 最新合作通路都在這！(請使用手機開啟)</td>
                                                     <td>無限期</td>
 													<td><button type="button" class="btn btn-info">LINE Pay</button>
 													    <button type="button" class="btn btn-info">通路</button>
