--- a/pages/index.html
+++ b/pages/index.html
@@ -487,10 +487,10 @@
                                                     <td>陽信iSunny數位銀行</td>
                                                     <td>1.3%</td>
                                                     <td>10萬</td>
-													<td>跨行轉帳免費10次<br/>跨行提款免費10次</td>
+													<td>跨行轉帳免費5次<br/>跨行提款免費5次</td>
                                                     <td>20190531</td>
                                                     <td>5000-10萬才有1.3%，放滿實際約1.24%</td>
-													<td><a href="https://wwwfile.megabank.com.tw/event/megalite/event4.html">活動網址</a></td>
+													<td><a href="https://isunny.sunnybank.com.tw/dsa/">活動網址</a></td>
 
                                                 </tr>
 						<tr>
@@ -498,10 +498,10 @@
                                                     <td>第一iLEO數位銀行</td>
                                                     <td>1.2%</td>
                                                     <td>12萬</td>
-													<td>跨行轉帳免費10次<br/>跨行提款免費10次</td>
+													<td>跨行轉帳免費10次（限本行網銀/app）<br/>跨行提款免費5次</td>
                                                     <td>20191231</td>
                                                     <td></td>
-													<td><a href="https://wwwfile.megabank.com.tw/event/megalite/event4.html">活動網址</a></td>
+													<td><a href="https://ibank.firstbank.com.tw/NetBank/DigAMA/index.html">活動網址</a></td>
 
                                                 </tr>
                                             </tbody>
