--- a/pages/index.html
+++ b/pages/index.html
@@ -347,26 +347,7 @@
             <div class="row">
                 <div class="col-lg-12">
 				
-                    <!-- /.panel -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> TBD 計畫開發 (20190213 )
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-					1. 接Database<br/>
-					2. 創建活動內容方便 (活動標題/內容/活動起始日/連結網頁)<br/>
-					3. 加上tag，方便左側選單能快速選擇
-                                </div>
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-				
+			
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -574,6 +555,17 @@
 														<button type="button" class="btn btn-info">全家便利超商</button>
 															<button type="button" class="btn btn-info">台灣大車隊</button></td>
 													<td><a href="https://www.esunbank.com.tw/event/credit/picard/index.html">說明網頁</a><br/>(<a href="https://card.esunbank.com.tw/EsunCreditweb/txnproc/selApplyCard?PRJCD=APYCRD0049&param=APYCRD0049,,,,,zuvuuLuouuLuyuL0vozdog1gdzf1geouuuf033456,,,,,e">推薦辦卡網址</a>)</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>4</td>
+                                                    <td>富邦銀行</td>
+                                                    <td>富邦J卡(現金回饋版/LINE Points版)</td>
+                                                    <td>旅日消費3%神回饋</td>
+													<td><button type="button" class="btn btn-info">現金回饋</button>
+														<button type="button" class="btn btn-info">LINE Points</button>
+														<button type="button" class="btn btn-info">日本</button>
+															<button type="button" class="btn btn-info">旅日神卡</button></td>
+													<td><a href="https://www.fubon.com/banking/personal/credit_card/all_card/omiyage/omiyage.htm">說明網頁</a><br/>(<a href="https://efin.taipeifubon.com.tw/bank_bcs/c/7be3c775-9e8f-4951-a245-78d2c16feef5">推薦辦卡網址</a>)</td>
                                                 </tr>
                                             </tbody>
                                         </table>
